# Mini-Document-Validator-Backend

./: .dockerignore  .env.example  .env.example.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.txt  LICENSE.txt  Makefile  Makefile.txt  README.md  Statement.docx  all_tests.txt  debug_detailed.py  debug_import.py  debug_output.txt  docker-compose.yml  edge_test.txt  final_run.txt  final_tests.txt  find_pydantic_error.py  latest_tests.txt  log.txt  manual_test.py  pyproject.toml  test_import.py  test_ok.txt  test_output.txt  test_results.txt  test_rules.txt
.devcontainer/: Dockerfile.txt  devcontainer.json
.github/workflows/: ci.yml
samples/: sample_document_fail.txt  sample_document_pass.txt
scripts/: check_env.py  dev.ps1  repro_date_crash.py  setup.ps1  test.ps1  verify_fixes.py  verify_refactor.py
src/app/: __init__.py  __main__.py  ai_extractor.py  config.py  main.py  models.py  validation.py
src/app/data/: valid_vessels.json
src/app/routes/: __init__.py  meta.py  validate.py
src/app/services/: __init__.py  vessels.py
tests/: test_edge_cases.py  test_meta.py  test_validate_ok.py  test_validate_rules.py
