[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genoshi-backend-validator"
version = "0.1.0"
description = "FastAPI service that validates insurance documents for the Genoshi backend challenge"
authors = [
  { name = "Genoshi Contributors" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "black>=24.4.0",
  "ruff>=0.4.4",
  "pre-commit>=3.7.0",
  "bandit>=1.7.8"
]

[project.urls]
Homepage = "https://example.com/genoshi"

[project.scripts]
genoshi-validator = "app.__main__:main"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP", "S", "C4", "TID", "PL", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
namespace_packages = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.build.targets.wheel.force-include]
"src/app/data" = "app/data"

[tool.hatch.build.targets.sdist]
include = [
  "src/app",
  "README.md",
  "LICENSE.txt",
  "pyproject.toml",
  "src/app/data/**",
]
